@startuml silver-vs-gold

title Silver et Gold : deux niveaux de préparation\nLe grain fin d'un côté, l'indicateur prêt à afficher de l'autre

skinparam packageStyle rectangle
skinparam linetype ortho

package "SILVER — modèle en étoile, grain fin\n1 ligne = 1 événement" #E8F4F8 {

  entity "dim_patient" as s_dpat {
    patient_id
    birth_date, sex, region_code
  }
  entity "dim_service" as s_dsrv {
    service_code
    service_label / categorie / pole
    capacite_lits
  }
  entity "dim_cim10" as s_dcim {
    code_cim10
    libelle
  }
  entity "fact_sejours" as s_fsej {
    stay_id
    <b>duree_sejour_h</b>
    <b>readmission_30j</b>
    <b>age_at_admission</b>
  }
  entity "fact_monitoring" as s_fmon {
    stay_id, ts
    <b>is_alerte_fc / spo2 / temp</b>
  }
  entity "dim_ccam" as s_dccam {
    code_ccam
    libelle, tarif_euros
  }
  entity "fact_diagnostics" as s_fdiag {
    stay_id, code_cim10
    type
    <b>age_at_diagnostic</b>
  }
  entity "fact_actes" as s_fact {
    stay_id, code_ccam, acte_ts
    patient_id, service_code
  }

  s_dpat ||--o{ s_fsej
  s_dsrv ||--o{ s_fsej
  s_dpat ||--o{ s_fmon
  s_dsrv ||--o{ s_fmon
  s_dcim ||--o{ s_fdiag
  s_dpat ||--o{ s_fdiag
  s_dccam ||--o{ s_fact
  s_dsrv ||--o{ s_fact
}

package "GOLD — un indicateur par table\n1 ligne = 1 valeur affichable" #FFF4E0 {
  entity "dms_par_service" as g_dms {
    service x mois
    dms_jours
  }
  entity "urgences_par_jour" as g_urg {
    jour
    nb_passages
  }
  entity "readmission_par_mois" as g_rea {
    mois
    taux_readmission_pct
  }
  entity "alertes_par_jour" as g_ale {
    jour
    nb_alertes_*
  }
  entity "admissions_par_age" as g_age {
    age_group
    nb_admissions
  }
  entity "prevalence_pathologie" as g_pre {
    code_cim10
    taille_cohorte
  }
  entity "cohorte_age_sexe" as g_coh {
    age_group x sex
    taille_cohorte
  }
  entity "activite_dms_par_categorie_service" as g_cat {
    categorie x mois
    dms_jours
  }
  entity "actes_par_service" as g_asrv {
    service x mois
    nb_actes
  }
  entity "actes_par_code_ccam" as g_accam {
    code_ccam x mois
    nb_actes
  }
  entity "densite_actes_par_lits" as g_dens {
    service x mois
    actes / lit
  }
  entity "montant_facture_par_service" as g_fact {
    service x mois
    montant_facture_euros
  }
}

s_fsej -[#green,bold]-> g_dms : moyenne\npar service/mois
s_fsej -[#green,bold]-> g_urg : comptage\npar jour
s_fsej -[#green,bold]-> g_rea : taux\npar mois
s_fmon -[#green,bold]-> g_ale : comptage\npar jour
s_fsej -[#green,bold]-> g_age : comptage par tranche\nd'âge A L'ADMISSION
s_fdiag -[#green,bold]-> g_pre : cohortes\n(>= 5 patients)
s_fsej -[#green,bold]-> g_coh : âge A L'INCLUSION\n(>= 5 patients)
s_fsej -[#green,bold]-> g_cat : moyenne\npar catégorie/mois
s_fact -[#green,bold]-> g_asrv : comptage\npar service/mois
s_fact -[#green,bold]-> g_accam : comptage\npar acte/mois
s_fact -[#green,bold]-> g_dens : actes / capacite_lits
s_fact -[#green,bold]-> g_fact : somme des tarifs\n(T2A)

note as N_silver
  <b>« La donnée, juste et exploitable »</b>
  6 729 séjours, 40 920 relevés,
  12 720 diagnostics, 8 112 actes :
  chaque ligne est un événement réel.
  ----
  Nettoyée, dédupliquée, contrôlée.
  Socle réutilisable : un nouvel
  indicateur se calcule d'ici sans
  retoucher au pipeline amont.
  ----
  Accès : personne. Ni pilotage_user
  ni recherche_user n'y ont de droit.
end note
N_silver .. s_dcim

note as N_gold
  <b>« La réponse, déjà calculée »</b>
  8 lignes pour la DMS, 28 pour les
  urgences, 20 pour les cohortes :
  chaque ligne est un chiffre à afficher.
  ----
  Les dashboards lisent, ils n'agrègent pas.
  Contrepartie assumée : un nouvel axe
  d'analyse demande une nouvelle table.
  ----
  C'est ici que vit le découpage en tranches
  d'âge : Silver stocke l'âge révolu, Gold
  décide des bornes. En changer n'oblige pas
  à reconstruire le grain fin.
  ----
  Accès cloisonné : pilotage_user sur les
  10 tables de pilotage, recherche_user sur
  les 2 tables de cohortes.
end note
N_gold .. g_coh

@enduml
